Fixed animation of experience section on smaller screens

--- a/src/views/Experience/Experience.css
+++ b/src/views/Experience/Experience.css
@@ -48,6 +48,7 @@
 
 .timeline-card {
   border: none !important;
+  text-align: justify;
 }
 
 /* Place the container to the left */
@@ -86,17 +87,15 @@
   border-color: transparent white transparent transparent;
 }
 
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   /* Place the timelime to the left */
   .main-timeline::after {
     left: 31px;
   }
 
-  /* Full-width containers */
   .timeline {
     width: 100%;
-    padding-left: 70px;
+    padding-left: 100px;
     padding-right: 0;
   }
 
@@ -114,5 +113,14 @@
   /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
+  }
+
+  .timeline-img {
+    width: 80px;
+    height: 80px;
+    top: -12px;
+    border-radius: 50%;
+    z-index: 1;
+    left: -8px !important;
   }
 }
